--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -4,7 +4,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.enerjisa.mypass2.Main2Activity">
+    tools:context="com.elerot.mypass2.Main2Activity">
 
     <Button
         android:layout_width="wrap_content"
