--- a/app/src/main/res/menu/menu_new_usr.xml
+++ b/app/src/main/res/menu/menu_new_usr.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.enerjisa.mypass2.NewUsrActivity">
+    tools:context="com.elerot.mypass2.NewUsrActivity">
     <!--<item android:id="@+id/action_settings" android:title="@string/action_settings"-->
         <!--android:orderInCategory="100" app:showAsAction="never" />-->
 </menu>
